[gd_scene load_steps=11 format=3 uid="uid://c040ial6lvrtx"]

[ext_resource type="Script" path="res://Assets/Scripts/ui.gd" id="1_tsvdm"]
[ext_resource type="Texture2D" uid="uid://b02ic7bcs8jue" path="res://Assets/Graphics/battery.png" id="2_d4edw"]
[ext_resource type="Texture2D" uid="uid://bqptyqceux1x8" path="res://Assets/Graphics/reapair_kit.png" id="3_qjae2"]
[ext_resource type="Texture2D" uid="uid://boooxr3vq7rw1" path="res://Assets/Graphics/spark.png" id="4_ah53a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fhlm"]
bg_color = Color(0, 0.294118, 0.309804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.721569, 0.760784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_io3et"]
bg_color = Color(0, 0.768627, 0.815686, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.721569, 0.760784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fw7ck"]
bg_color = Color(0.360784, 0.109804, 0.117647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.560784, 0.172549, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4pk2g"]
bg_color = Color(0.792157, 0.247059, 0.254902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.560784, 0.172549, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6e3fv"]
bg_color = Color(0.133333, 0.380392, 0.14902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.588235, 0.231373, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b724b"]
bg_color = Color(0.258824, 0.733333, 0.290196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.588235, 0.231373, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("1_tsvdm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.95
anchor_right = 0.1
anchor_bottom = 0.95
offset_top = -54.0
offset_right = 66.0
grow_vertical = 0

[node name="OxygenLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "OXYGEN"
horizontal_alignment = 1

[node name="OxygenBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_6fhlm")
theme_override_styles/fill = SubResource("StyleBoxFlat_io3et")
value = 100.0

[node name="HealtLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HEALTH"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_fw7ck")
theme_override_styles/fill = SubResource("StyleBoxFlat_4pk2g")
value = 100.0

[node name="HungerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HUNGER"
horizontal_alignment = 1

[node name="HungerBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_6e3fv")
theme_override_styles/fill = SubResource("StyleBoxFlat_b724b")
value = 100.0

[node name="DepthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "0 METERS"

[node name="ScrapLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = -30.5
offset_top = -23.0
offset_right = 30.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Scrap: 0"
horizontal_alignment = 1

[node name="Objectives" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.9
anchor_right = 0.9
anchor_bottom = 0.9
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.96, 1.96)

[node name="Battery" type="TextureRect" parent="Objectives"]
modulate = Color(1, 1, 1, 0.380392)
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_d4edw")
expand_mode = 2

[node name="RepairKit" type="TextureRect" parent="Objectives"]
modulate = Color(1, 1, 1, 0.380392)
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_qjae2")
expand_mode = 2

[node name="Spark" type="TextureRect" parent="Objectives"]
modulate = Color(0.513726, 0.513726, 0.513726, 1)
self_modulate = Color(1, 1, 1, 0.380392)
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_ah53a")
expand_mode = 2

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.244
anchor_right = 0.8
anchor_bottom = 0.244
offset_left = -20.0
offset_top = -27.5
offset_right = 20.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
